Kubeconfig/renderer/adapt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adapt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adapt
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: adapt
    spec:
      containers:
      - name: adapt
        image: ghcr.io/kreut/adapt:master
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.9"
            memory: "1G"
          limits:
            cpu: "1.9"
            memory: "4G"
        ports:
        - containerPort: 80
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: adapt
  labels:
    app: adapt
spec:
  type: ClusterIP
  selector:
    app: adapt
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
