Kubeconfig/renderer/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ww-balancer
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    service.beta.kubernetes.io/do-loadbalancer-name: "ww-balancer"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "public, max-age=604800";
spec:
  tls:
  - hosts:
    - "example.org"
    secretName: ""
  rules:
  - host: ""
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wwrenderer
            port:
              number: 80
